--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,14 +14,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/importButton"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
         app:layout_constraintVertical_chainStyle="packed"/>
 
     <Button
-        android:id="@+id/importButton"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Import Image Folder"
+        android:text="Lets Start"
         app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
